--- a/Data Cleansing.ipynb
+++ b/Data Cleansing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -53,18 +53,17 @@
       "|2021-05-01 10:01:44|c52587cc|     20|              Canada| 28.0|\n",
       "+-------------------+--------+-------+--------------------+-----+\n",
       "only showing top 20 rows\n",
-      "\n",
-      "None\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(dt.show())"
+    "dt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -76,19 +75,18 @@
       "+-------+---------+-------+-------+-------+------+\n",
       "|  count|   500000| 499998| 500000| 500000|500000|\n",
       "+-------+---------+-------+-------+-------+------+\n",
-      "\n",
-      "None\n"
+      "\n"
      ]
     }
    ],
    "source": [
     "# Data Profiling\n",
-    "print(dt.summary(\"count\").show())"
+    "dt.summary(\"count\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -101,18 +99,17 @@
       "|2021-05-01 14:41:20|   null|    516| Brazil|27.37|\n",
       "|2021-06-30 02:27:00|   null|   1390|  Japan|27.99|\n",
       "+-------------------+-------+-------+-------+-----+\n",
-      "\n",
-      "None\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(dt.where( dt.user_id.isNull()).show())"
+    "dt.where( dt.user_id.isNull()).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -125,18 +122,17 @@
       " |-- book_id: integer (nullable = true)\n",
       " |-- country: string (nullable = true)\n",
       " |-- price: double (nullable = true)\n",
-      "\n",
-      "None\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(dt.printSchema())"
+    "dt.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +145,7 @@
       " |-- book_id: integer (nullable = true)\n",
       " |-- country: string (nullable = true)\n",
       " |-- price: double (nullable = true)\n",
-      "\n",
-      "None\n"
+      "\n"
      ]
     }
    ],
@@ -162,106 +157,257 @@
     "dt_clean = dt.withColumn(\"timestamp\",\n",
     "                        f.to_timestamp(dt.timestamp, 'yyyy-mm-dd HH:mm:ss')\n",
     "                        )\n",
-    "print(dt_clean.printSchema())"
+    "dt_clean.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58\n"
-     ]
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# หา Lexical errors จาก Column Country\n",
-    "print(dt_clean.select(\"country\").distinct().count())"
+    "dt_clean.select(\"country\").distinct().count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------+\n",
-      "|Country                 |\n",
-      "+------------------------+\n",
-      "|Algeria                 |\n",
-      "|Argentina               |\n",
-      "|Australia               |\n",
-      "|Austria                 |\n",
-      "|Bahamas                 |\n",
-      "|Belgium                 |\n",
-      "|Brazil                  |\n",
-      "|Canada                  |\n",
-      "|China                   |\n",
-      "|Colombia                |\n",
-      "|Croatia                 |\n",
-      "|Denmark                 |\n",
-      "|Dubai                   |\n",
-      "|Egypt                   |\n",
-      "|Estonia                 |\n",
-      "|Finland                 |\n",
-      "|France                  |\n",
-      "|Germany                 |\n",
-      "|Greece                  |\n",
-      "|Hungary                 |\n",
-      "|India                   |\n",
-      "|Indonesia               |\n",
-      "|Ireland                 |\n",
-      "|Israel                  |\n",
-      "|Italy                   |\n",
-      "|Jamaica                 |\n",
-      "|Japan                   |\n",
-      "|Japane                  |\n",
-      "|Kenya                   |\n",
-      "|Kuwait                  |\n",
-      "|Malaysia                |\n",
-      "|Maldives                |\n",
-      "|Mexico                  |\n",
-      "|Montenegro              |\n",
-      "|Netherlands             |\n",
-      "|New Zealand             |\n",
-      "|Nigeria                 |\n",
-      "|Norway                  |\n",
-      "|Pakistan                |\n",
-      "|Peru                    |\n",
-      "|Philippines             |\n",
-      "|Poland                  |\n",
-      "|Portugal                |\n",
-      "|Serbia                  |\n",
-      "|Singapore               |\n",
-      "|Slovakia                |\n",
-      "|South Africa            |\n",
-      "|South Korea             |\n",
-      "|Spain                   |\n",
-      "|Sweden                  |\n",
-      "|Switzerland             |\n",
-      "|Taiwan                  |\n",
-      "|Thailand                |\n",
-      "|Turkey                  |\n",
-      "|United Kingdom          |\n",
-      "|United States of America|\n",
-      "|Vietnam                 |\n",
-      "|Yemen                   |\n",
-      "+------------------------+\n",
-      "\n",
-      "None\n"
+      "+--------------------+\n",
+      "|             Country|\n",
+      "+--------------------+\n",
+      "|             Algeria|\n",
+      "|           Argentina|\n",
+      "|           Australia|\n",
+      "|             Austria|\n",
+      "|             Bahamas|\n",
+      "|             Belgium|\n",
+      "|              Brazil|\n",
+      "|              Canada|\n",
+      "|               China|\n",
+      "|            Colombia|\n",
+      "|             Croatia|\n",
+      "|             Denmark|\n",
+      "|               Dubai|\n",
+      "|               Egypt|\n",
+      "|             Estonia|\n",
+      "|             Finland|\n",
+      "|              France|\n",
+      "|             Germany|\n",
+      "|              Greece|\n",
+      "|             Hungary|\n",
+      "|               India|\n",
+      "|           Indonesia|\n",
+      "|             Ireland|\n",
+      "|              Israel|\n",
+      "|               Italy|\n",
+      "|             Jamaica|\n",
+      "|               Japan|\n",
+      "|              Japane|\n",
+      "|               Kenya|\n",
+      "|              Kuwait|\n",
+      "|            Malaysia|\n",
+      "|            Maldives|\n",
+      "|              Mexico|\n",
+      "|          Montenegro|\n",
+      "|         Netherlands|\n",
+      "|         New Zealand|\n",
+      "|             Nigeria|\n",
+      "|              Norway|\n",
+      "|            Pakistan|\n",
+      "|                Peru|\n",
+      "|         Philippines|\n",
+      "|              Poland|\n",
+      "|            Portugal|\n",
+      "|              Serbia|\n",
+      "|           Singapore|\n",
+      "|            Slovakia|\n",
+      "|        South Africa|\n",
+      "|         South Korea|\n",
+      "|               Spain|\n",
+      "|              Sweden|\n",
+      "|         Switzerland|\n",
+      "|              Taiwan|\n",
+      "|            Thailand|\n",
+      "|              Turkey|\n",
+      "|      United Kingdom|\n",
+      "|United States of ...|\n",
+      "|             Vietnam|\n",
+      "|               Yemen|\n",
+      "+--------------------+\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(dt_clean.select(\"Country\").distinct().sort(\"Country\").show(58, False))"
+    "# ใช้ Spark SQL ในการดึงข้อมูลจาก Spark DataFrame\n",
+    "dt.createOrReplaceTempView(\"data\")\n",
+    "dt_sql_country = spark.sql(\"\"\"\n",
+    "SELECT DISTINCT country\n",
+    "FROM data\n",
+    "ORDER BY country\n",
+    "\"\"\")\n",
+    "dt_sql_country.show(58)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------+-------+-------+-----+\n",
+      "|          timestamp| user_id|book_id|country|price|\n",
+      "+-------------------+--------+-------+-------+-----+\n",
+      "|2021-05-01 13:11:11|a904217a|   1129| Japane|29.65|\n",
+      "|2021-05-02 10:27:42|a6052e97|   1466| Japane| 35.0|\n",
+      "|2021-05-04 10:44:41|a0f44c26|   1497| Japane|17.49|\n",
+      "|2021-05-04 05:40:46|ad0f9907|   2269| Japane|35.71|\n",
+      "|2021-05-05 01:08:25|aa169f5d|   1378| Japane|59.93|\n",
+      "|2021-05-04 17:42:32|a28e3c68|   1411| Japane|29.99|\n",
+      "|2021-05-05 16:29:39|a909212e|   1652| Japane|24.99|\n",
+      "|2021-05-06 23:10:29|a7b05d98|   1420| Japane|30.79|\n",
+      "|2021-05-07 22:18:42|a169255e|   1459| Japane|25.08|\n",
+      "|2021-05-08 06:06:15|ab2159d6|   1035| Japane|22.67|\n",
+      "|2021-05-09 02:46:06|a6cba2fc|   1928| Japane|  7.0|\n",
+      "|2021-05-09 12:12:35|a0e31842|   1358| Japane|34.99|\n",
+      "|2021-05-11 16:33:19|a2bc5460|   1616| Japane|29.65|\n",
+      "|2021-05-12 22:32:52|af75e4d1|   1603| Japane|18.89|\n",
+      "|2021-05-12 19:14:33|a0accb45|   1934| Japane| 1.95|\n",
+      "|2021-05-13 05:23:12|abfe1e79|   1368| Japane|47.93|\n",
+      "|2021-05-13 01:36:34|adfae803|   1512| Japane| 28.0|\n",
+      "|2021-05-16 04:30:44|a71dfe3f|   1494| Japane|48.99|\n",
+      "|2021-05-17 11:14:58|a4c531fc|   1336| Japane|44.99|\n",
+      "|2021-05-17 04:26:45|a33e4db6|   1418| Japane| 33.6|\n",
+      "+-------------------+--------+-------+-------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# จะเห็นว่ามีประเทศ Japane ซึ่งไม่มีอยู่จริงและน่าจะหมายถึงประเทศ Japan \n",
+    "# เมื่อลองเรียกข้อมูลประเทศ Japane ออกมาดูจะเห็นว่ามีข้อมุลที่กรอกผิดไม่น้อย\n",
+    "\n",
+    "dt_sql_japane = spark.sql(\"\"\"\n",
+    "SELECT * \n",
+    "FROM data\n",
+    "WHERE country = 'Japane'\n",
+    "\"\"\")\n",
+    "dt_sql_japane.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|             country|\n",
+      "+--------------------+\n",
+      "|             Algeria|\n",
+      "|           Argentina|\n",
+      "|           Australia|\n",
+      "|             Austria|\n",
+      "|             Bahamas|\n",
+      "|             Belgium|\n",
+      "|              Brazil|\n",
+      "|              Canada|\n",
+      "|               China|\n",
+      "|            Colombia|\n",
+      "|             Croatia|\n",
+      "|             Denmark|\n",
+      "|               Dubai|\n",
+      "|               Egypt|\n",
+      "|             Estonia|\n",
+      "|             Finland|\n",
+      "|              France|\n",
+      "|             Germany|\n",
+      "|              Greece|\n",
+      "|             Hungary|\n",
+      "|               India|\n",
+      "|           Indonesia|\n",
+      "|             Ireland|\n",
+      "|              Israel|\n",
+      "|               Italy|\n",
+      "|             Jamaica|\n",
+      "|               Japan|\n",
+      "|               Kenya|\n",
+      "|              Kuwait|\n",
+      "|            Malaysia|\n",
+      "|            Maldives|\n",
+      "|              Mexico|\n",
+      "|          Montenegro|\n",
+      "|         Netherlands|\n",
+      "|         New Zealand|\n",
+      "|             Nigeria|\n",
+      "|              Norway|\n",
+      "|            Pakistan|\n",
+      "|                Peru|\n",
+      "|         Philippines|\n",
+      "|              Poland|\n",
+      "|            Portugal|\n",
+      "|              Serbia|\n",
+      "|           Singapore|\n",
+      "|            Slovakia|\n",
+      "|        South Africa|\n",
+      "|         South Korea|\n",
+      "|               Spain|\n",
+      "|              Sweden|\n",
+      "|         Switzerland|\n",
+      "|              Taiwan|\n",
+      "|            Thailand|\n",
+      "|              Turkey|\n",
+      "|      United Kingdom|\n",
+      "|United States of ...|\n",
+      "|             Vietnam|\n",
+      "|               Yemen|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# แก้ไขจาก Japane เป็น Japan\n",
+    "dt_sql_result = spark.sql(\"\"\"\n",
+    "SELECT timestamp, user_id, book_id,\n",
+    "    CASE WHEN country = 'Japane' THEN 'Japan' ELSE country END AS country,\n",
+    "price\n",
+    "FROM data\n",
+    "\"\"\")\n",
+    "dt_sql_result.select(\"country\").distinct().sort(\"country\").show(58)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
