--- a/Data Cleansing.ipynb
+++ b/Data Cleansing.ipynb
@@ -404,10 +404,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+----------+-------+--------------------+-----+\n",
+      "|          timestamp|   user_id|book_id|             country|price|\n",
+      "+-------------------+----------+-------+--------------------+-----+\n",
+      "|2021-06-19 16:00:22|ca86d17200|   2269|United States of ...|35.71|\n",
+      "|2021-07-15 18:53:09|ca86d17200|    322|United States of ...|30.79|\n",
+      "+-------------------+----------+-------+--------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ข้อมูล user_id ของเราเป็นตัวอักษร a-z และตัวเลข 0-9 รวมกันอยู่ 8 ตัว \n",
+    "# เราลองเช็คดูว่ามีตัวที่ไม่เป็นไปตามเงื่อนไขนี้มั้ย ด้วยการเช็ครูปแบบ Regular Expression\n",
+    "\n",
+    "dt_check_userid = spark.sql(\"\"\"\n",
+    "SELECT *\n",
+    "FROM data\n",
+    "WHERE user_id NOT RLIKE '^[a-z0-9]{8}$'\n",
+    "\"\"\")\n",
+    "dt_check_userid.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------+-------+-------+-----+\n",
+      "|timestamp|user_id|book_id|country|price|\n",
+      "+---------+-------+-------+-------+-----+\n",
+      "+---------+-------+-------+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_sql_userid_result = spark.sql(\"\"\"\n",
+    "SELECT timestamp,\n",
+    "CASE WHEN user_id = 'ca86d17200' THEN 'ca86d172' ELSE user_id END AS user_id,\n",
+    "book_id, country, price\n",
+    "FROM data\n",
+    "\"\"\")\n",
+    "\n",
+    "dt_sql_userid_result.where( dt_sql_userid_result.user_id == 'ca86d17200' ).show()"
+   ]
   }
  ],
  "metadata": {
