--- a/Data Cleansing.ipynb
+++ b/Data Cleansing.ipynb
@@ -460,6 +460,57 @@
     "\n",
     "dt_sql_userid_result.where( dt_sql_userid_result.user_id == 'ca86d17200' ).show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------+-------+-------+-----+\n",
+      "|timestamp|user_id|book_id|country|price|\n",
+      "+---------+-------+-------+-------+-----+\n",
+      "+---------+-------+-------+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_nullist = spark.sql(\"\"\"\n",
+    "SELECT timestamp,\n",
+    "CASE WHEN user_id is NULL THEN '000000' ELSE user_id END AS user_id,\n",
+    "book_id, country, price\n",
+    "FROM data\n",
+    "\"\"\")\n",
+    "\n",
+    "dt_nullist.where( dt_nullist.user_id.isNull() ).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------+-------+-------+-----+\n",
+      "|          timestamp|user_id|book_id|country|price|\n",
+      "+-------------------+-------+-------+-------+-----+\n",
+      "|2021-05-01 14:41:20| 000000|    516| Brazil|27.37|\n",
+      "|2021-06-30 02:27:00| 000000|   1390|  Japan|27.99|\n",
+      "+-------------------+-------+-------+-------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_nullist.where( dt_nullist.user_id == '000000').show()"
+   ]
   }
  ],
  "metadata": {
